build/Logo.java
/* Logo.java */
/* Generated By:JavaCC: Do not edit this line. Logo.java */
import java.lang.*;
import java.io.*;
import java.util.*;

public class Logo implements LogoConstants {

  static private File javaFile, htmlFile;   // output files
  static private PrintWriter pw;            // printwriter used for every output
  static private int numIndent = 0;         // size of indentation
  static private int repcountNum = 0;       // number for multiple REPEATs

  // to pretty-print the translation
  // uses numIndent and pw defined as static variables in LogoParser
  // writes in pw the numIndent times the indent string
  public static void indent() {
    for (int i=0; i<numIndent; i++) { pw.print("   "); }
  }

  // Main method that reads the source file ".logo" and translates it
  // into two files: ".java" ".html"
  public static void main(String args[]) throws ParseException,
                                                TokenMgrError,
                                                IOException
  {
    // reads the source file ".logo" (first argument of command line)
    BufferedReader in = new BufferedReader(new FileReader(args[0]));
    Logo parser = new Logo(in);
    try {
      parser.start();
      System.out.println("DONE");
    }
    catch (ParseException x) { System.out.println("Syntaxtic Error"); throw x; }
    catch (TokenMgrError x)  { System.out.println("Lexical Error"); throw x; }
  }

  static final public void start() throws ParseException, IOException {
    trace_call("start");
    try {Token t;
        String sub;
        String stat;
      jj_consume_token(LOGO);
      t = jj_consume_token(IDENTIFIER);
// Create the HTML file for the applet
    htmlFile = new File(t.image.toLowerCase() + ".html");
    pw = new PrintWriter(new FileOutputStream(htmlFile));
    pw.println("<html>");
    pw.println("  <body>");
    pw.println("  <applet code='" + t.image.toLowerCase() +
               ".class'width=600 height=600></applet>");
    pw.println("  </html>");
    pw.println("</body>");
    pw.close();
    //Create the Java file and the class
    javaFile = new File(t.image.toLowerCase() + ".java");
    pw = new PrintWriter(new FileOutputStream(javaFile));
    pw.println("import java.awt.Graphics;\u005cn");
    pw.println("public class " + t.image.toLowerCase() +
               " extends java.applet.Applet {\u005cn" );
    numIndent++;
    indent();
    pw.println("private LogoPrimitives l;\u005cn");
    pw.println("private int repcount;\u005cn");
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
        sub = subroutine();
indent();
                        pw.println(sub);
      }
indent(); numIndent++;
     pw.println("public void paint(Graphics g) {");
     indent();
     pw.println("l = new LogoPrimitives(this);");
     pw.println();
      label_2:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_2;
        }
        stat = statement();
indent();
                   pw.println(stat);
      }
numIndent--;
      indent();
      pw.println("}");
      jj_consume_token(END);
numIndent--;
                        indent();
                        pw.println("}");
                        pw.flush();
                        pw.close();
    } finally {
      trace_return("start");
    }
  }

  static final public String subroutine() throws ParseException {
    trace_call("subroutine");
    try {Token identifier;
        Token p;
        ArrayList<String> params = new ArrayList<String>();
        String paramString = "";
        String statement;
        String statements = "";
        String sub;
        int i;
      jj_consume_token(SUBROUTINE);
      identifier = jj_consume_token(IDENTIFIER);
      label_3:
      while (true) {
        if (jj_2_3(2)) {
          ;
        } else {
          break label_3;
        }
        p = jj_consume_token(PARAMETER);
params.add("double "+p.image);
      }
      label_4:
      while (true) {
        if (jj_2_4(2)) {
          ;
        } else {
          break label_4;
        }
        statement = statement();
statements += "\u005ct" + statement + "\u005cn";
      }
      jj_consume_token(END);
for(i = 0; i < params.size(); i++){
                        paramString += params.get(i);
                        if(i != params.size() - 1){
                                paramString += ", ";
                        }
                }
                sub = "private void "+identifier+"("+paramString+"){\u005cn";
                sub += statements;
                sub += "}\u005cn";

                {if ("" != null) return sub;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("subroutine");
    }
  }

  static final public String statement() throws ParseException {
    trace_call("statement");
    try {String s = "";
        String param;
        String condition;
        ArrayList<String> params = new ArrayList<String>();
        String paramString = "";
        String statements = "";
        String elseStatements = "";
        Token t;
        String count;
        int i;
      if (jj_2_10(2)) {
        jj_consume_token(CLEARSCREEN);
s = "l.cs();";
      } else if (jj_2_11(2)) {
        jj_consume_token(PENDOWN);
s = "l.pd();";
      } else if (jj_2_12(2)) {
        jj_consume_token(PENUP);
s = "l.pu();";
      } else if (jj_2_13(2)) {
        jj_consume_token(HIDETURTLE);
s = "l.et();";
      } else if (jj_2_14(2)) {
        jj_consume_token(SHOWTURTLE);
s = "l.dt();";
      } else if (jj_2_15(2)) {
        jj_consume_token(FORWARD);
        param = nExpr();
s = "l.fd("+param+");";
      } else if (jj_2_16(2)) {
        jj_consume_token(BACKWARD);
        param = nExpr();
s = "l.bk("+param+");";
      } else if (jj_2_17(2)) {
        jj_consume_token(LEFTTURN);
        param = nExpr();
s = "l.rt("+param+");";
      } else if (jj_2_18(2)) {
        jj_consume_token(RIGHTTURN);
        param = nExpr();
s = "l.lt("+param+");";
      } else if (jj_2_19(2)) {
        jj_consume_token(WAIT);
        param = nExpr();
s = "l.wait("+param+");";
      } else if (jj_2_20(2)) {
        jj_consume_token(REPEAT);
        count = nExpr();
        jj_consume_token(LBRA);
        label_5:
        while (true) {
          if (jj_2_5(2)) {
            ;
          } else {
            break label_5;
          }
          param = statement();
statements += "\u005ct" + param + "\u005cn";
        }
        jj_consume_token(RBRA);
s = "for(repcount = 0; repcount <= ("+count+"); repcount++){\u005cn";
                                s += statements;
                                s += "}";
      } else if (jj_2_21(2)) {
        jj_consume_token(IF);
        condition = bExpr();
        jj_consume_token(LBRA);
        label_6:
        while (true) {
          if (jj_2_6(2)) {
            ;
          } else {
            break label_6;
          }
          param = statement();
statements += "\u005ct" + param + "\u005cn";
        }
        jj_consume_token(RBRA);
s = "if("+condition+"){";
                                s += statements;
                                s += "}";
      } else if (jj_2_22(2)) {
        jj_consume_token(IFELSE);
        condition = bExpr();
        jj_consume_token(LBRA);
        label_7:
        while (true) {
          if (jj_2_7(2)) {
            ;
          } else {
            break label_7;
          }
          param = statement();
statements += "\u005ct" + param + "\u005cn";
        }
        jj_consume_token(RBRA);
        jj_consume_token(LBRA);
        label_8:
        while (true) {
          if (jj_2_8(2)) {
            ;
          } else {
            break label_8;
          }
          param = statement();
elseStatements += "\u005ct" + param + "\u005cn";
        }
        jj_consume_token(RBRA);
s = "if("+condition+"){";
                                s += statements;
                                s += "} else {";
                                s += elseStatements;
                                s += "}";
      } else if (jj_2_23(2)) {
        t = jj_consume_token(IDENTIFIER);
        label_9:
        while (true) {
          if (jj_2_9(2)) {
            ;
          } else {
            break label_9;
          }
          param = nExpr();
params.add(param);
        }
s = t.image + "(";
                                        for(i = 0; i < params.size(); i++){
                                                paramString += params.get(i);
                                                if(i != params.size() - 1){
                                                        paramString += ", ";
                                                }
                                        }
                                        s += paramString + ");";
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return s;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("statement");
    }
  }

  static final public String nExpr() throws ParseException {
    trace_call("nExpr");
    try {String exp;
        String term;
      exp = nTerm();
      label_10:
      while (true) {
        if (jj_2_24(2)) {
          ;
        } else {
          break label_10;
        }
        if (jj_2_25(2)) {
          jj_consume_token(ADD);
exp += " + ";
        } else if (jj_2_26(2)) {
          jj_consume_token(SUB);
exp += " - ";
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        term = nTerm();
exp += term;
      }
{if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("nExpr");
    }
  }

  static final public String nTerm() throws ParseException {
    trace_call("nTerm");
    try {String term;
        Token sign;
        String factor;
      term = nFactor();
      label_11:
      while (true) {
        if (jj_2_27(2)) {
          ;
        } else {
          break label_11;
        }
        if (jj_2_28(2)) {
          sign = jj_consume_token(MUL);
        } else if (jj_2_29(2)) {
          sign = jj_consume_token(DIV);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        factor = nFactor();
term += sign.image + factor;
      }
{if ("" != null) return term;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("nTerm");
    }
  }

  static final public String nFactor() throws ParseException {
    trace_call("nFactor");
    try {String factor = "";
        String e;
        Token t = null;
      if (jj_2_30(2)) {
        jj_consume_token(SUB);
factor += "-";
      } else {
        ;
      }
      if (jj_2_31(2)) {
        t = jj_consume_token(NUM);
      } else if (jj_2_32(2)) {
        t = jj_consume_token(REPCOUNT);
      } else if (jj_2_33(2)) {
        t = jj_consume_token(PARAMETER);
      } else if (jj_2_34(2)) {
        jj_consume_token(LPAR);
        e = nExpr();
        jj_consume_token(RPAR);
factor += "("+e+")";
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
if(t == null){

                } else if(t.image == "REPCOUNT"){
                        factor += "repcount";
                } else {
                        factor += t.image;
                }
                {if ("" != null) return factor;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("nFactor");
    }
  }

  static final public String bExpr() throws ParseException {
    trace_call("bExpr");
    try {String expr;
        String term;
        Token comp;
      expr = bTerm();
      label_12:
      while (true) {
        if (jj_2_35(2)) {
          ;
        } else {
          break label_12;
        }
        comp = jj_consume_token(OR);
        term = bTerm();
expr += comp.image + term;
      }
{if ("" != null) return expr;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("bExpr");
    }
  }

  static final public String bTerm() throws ParseException {
    trace_call("bTerm");
    try {String term;
        String factor;
        Token comp;
      term = bFactor();
      label_13:
      while (true) {
        if (jj_2_36(2)) {
          ;
        } else {
          break label_13;
        }
        comp = jj_consume_token(AND);
        factor = bFactor();
term += comp.image + factor;
      }
{if ("" != null) return term;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("bTerm");
    }
  }

  static final public String bFactor() throws ParseException {
    trace_call("bFactor");
    try {String factor = "";
        String expr;
        Token comp;
        Token literal;
      if (jj_2_43(2)) {
        literal = jj_consume_token(TRUE);
{if ("" != null) return literal.image;}
      } else if (jj_2_44(2)) {
        literal = jj_consume_token(FALSE);
{if ("" != null) return literal.image;}
      } else if (jj_2_45(2)) {
        jj_consume_token(NOT);
        jj_consume_token(LPAR);
        expr = bExpr();
        jj_consume_token(RPAR);
factor = "!("+expr+")";
      } else if (jj_2_46(2)) {
        factor = nExpr();
        if (jj_2_37(2)) {
          comp = jj_consume_token(EQ);
        } else if (jj_2_38(2)) {
          comp = jj_consume_token(NE);
        } else if (jj_2_39(2)) {
          comp = jj_consume_token(LT);
        } else if (jj_2_40(2)) {
          comp = jj_consume_token(GT);
        } else if (jj_2_41(2)) {
          comp = jj_consume_token(LE);
        } else if (jj_2_42(2)) {
          comp = jj_consume_token(GE);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        expr = nExpr();
factor += comp.image + expr;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
{if ("" != null) return factor;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("bFactor");
    }
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_23(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_24(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_25(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_26(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_27(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_28(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_29(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_2_30(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_30(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(29, xla); }
  }

  static private boolean jj_2_31(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_31(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(30, xla); }
  }

  static private boolean jj_2_32(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_32(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(31, xla); }
  }

  static private boolean jj_2_33(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_33(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(32, xla); }
  }

  static private boolean jj_2_34(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_34(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(33, xla); }
  }

  static private boolean jj_2_35(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_35(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(34, xla); }
  }

  static private boolean jj_2_36(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_36(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(35, xla); }
  }

  static private boolean jj_2_37(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_37(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(36, xla); }
  }

  static private boolean jj_2_38(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_38(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(37, xla); }
  }

  static private boolean jj_2_39(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_39(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(38, xla); }
  }

  static private boolean jj_2_40(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_40(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(39, xla); }
  }

  static private boolean jj_2_41(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_41(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(40, xla); }
  }

  static private boolean jj_2_42(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_42(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(41, xla); }
  }

  static private boolean jj_2_43(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_43(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(42, xla); }
  }

  static private boolean jj_2_44(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_44(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(43, xla); }
  }

  static private boolean jj_2_45(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_45(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(44, xla); }
  }

  static private boolean jj_2_46(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_46(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(45, xla); }
  }

  static private boolean jj_3R_18()
 {
    if (jj_3R_19()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_27()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static private boolean jj_3_6()
 {
    if (jj_3R_15()) return true;
    return false;
  }

  static private boolean jj_3R_14()
 {
    if (jj_scan_token(SUBROUTINE)) return true;
    if (jj_scan_token(IDENTIFIER)) return true;
    return false;
  }
